[Glitch] RTL: fix cardbar margins and alignment
Port c73864c1373330f2ef75006d639f90a1debcce6d to glitch-soc

--- a/app/javascript/flavours/glitch/styles/rtl.scss
+++ b/app/javascript/flavours/glitch/styles/rtl.scss
@@ -357,4 +357,10 @@ body.rtl {
       margin-right: 0;
     }
   }
+
+  .card__bar .display-name {
+    margin-left: 0;
+    margin-right: 15px;
+    text-align: right;
+  }
 }
